@@ -3,6 +3,8 @@
 #
 
 
+2017-10-14 -> add some minor steps towards joystick fab
+
 2017-10-11 -> add next steps towards joystick fab
 	   -> fix missing free of joystick array
 
